--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <div class="testimonial-grid">
         <div class="testimonial-card">
             <p>"Best cleaning team ever! They saved our office during flu season."</p>
-            <strong>— Mrs. Adwoa Mensah, Bank Manager</strong>
+            <strong>— Mrs. Makafui Dartey, Chief Nursing Officer</strong>
         </div>
         <div class="testimonial-card">
             <p>"Professional, fast, and very thorough. Highly recommended!"</p>
@@ -303,3 +303,4 @@
 
 
 </html>
+
