--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <li>  <a href="#services">Services</a> </li>
             <li><a href="#process">Process</a></li>
             <li><a href="#award">Awards</a></li>
+            <li><a href="#lowfidel">Low Fidelity</li>
         </ul>
     </div>
 </nav>
@@ -303,4 +304,5 @@
 
 
 </html>
+
 
